@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage2/Attic/livecd-stage2-controller.sh,v 1.21 2006/04/20 15:17:01 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage2/Attic/livecd-stage2-controller.sh,v 1.22 2006/08/22 16:45:47 wolf31o2 Exp $
 
 . ${clst_sharedir}/targets/support/functions.sh
 . ${clst_sharedir}/targets/support/filesystem-functions.sh
@@ -63,11 +63,11 @@ case $1 in
 		fi
 	
 		# move over the environment
-		cp ${clst_sharedir}/livecd/files/livecd-bashrc \
+		cp -f ${clst_sharedir}/livecd/files/livecd-bashrc \
 			${clst_chroot_path}/root/.bashrc
-		cp ${clst_sharedir}/livecd/files/livecd-bash_profile \
+		cp -f ${clst_sharedir}/livecd/files/livecd-bash_profile \
 			${clst_chroot_path}/root/.bash_profile
-		cp ${clst_sharedir}/livecd/files/livecd-local.start \
+		cp -f ${clst_sharedir}/livecd/files/livecd-local.start \
 			${clst_chroot_path}/etc/conf.d/local.start
 		
 		# execute copy gamecd.conf if we're a gamecd
@@ -75,7 +75,7 @@ case $1 in
 		then
 			if [ -n "${clst_gamecd_conf}" ]
 			then
-				cp ${clst_gamecd_conf} ${clst_chroot_path}/tmp/gamecd.conf
+				cp -f ${clst_gamecd_conf} ${clst_chroot_path}/tmp/gamecd.conf
 			else
 				echo "gamecd/conf is required for a gamecd!"
 				exit 1
